[package]
name = "kx-page-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
base64 = "0.22.1"
chrono = "0.4.44"
lazy_static = "1.5.0"
prost = "0.14.3"
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
prost-build = "0.14.1"
